Make copy more jante

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,7 +8,7 @@ import greetings from "../data/greetings"
   <SEO title="Oscar Hillestad | Project Developer" keywords={[`Oscar Hillestad`, `Project Manager`]} />
   <Greeting greetings={greetings}/>
 
-## These are a few of the things I'm good at:
+## I love:
 - Product management
 - Tech-business bridging
 - Digital marketing
