More sensible SEO

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,7 +5,7 @@ import Greeting from "../components/Greeting"
 import greetings from "../data/greetings"
 
 <>
-  <SEO title="Oscar Hillestad | Project Developer" keywords={[`Oscar Hillestad`, `Project Manager`]} />
+  <SEO title="About Oscar" keywords={[`Oscar Hillestad`, `Project Manager`]} />
   <Greeting greetings={greetings}/>
 
 ## I love:
