More sensible responsive resets. Add section to index page.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,12 +1,14 @@
 import Layout from "../components/layout"
 import SEO from "../components/seo"
 import Greeting from "../components/Greeting"  
+import Section from "../components/Section"
 
 import greetings from "../data/greetings"
 
 <>
   <SEO title="About Oscar" keywords={[`Oscar Hillestad`, `Project Manager`]} />
   <Greeting greetings={greetings}/>
+<section>
 
 ## I love:
 - Product management
@@ -46,5 +48,6 @@ import greetings from "../data/greetings"
 - School of Business, Economics and Law at the University of Gothenburg (2006-2010)
 - Santa Barbara City College (2007)
 
+</section>
 </>
 
