Remove unused boilerplate files

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,7 +7,7 @@ import greetings from "../data/greetings"
 <>
   <SEO title="About Oscar" keywords={[`Oscar Hillestad`, `Project Manager`]} />
   <Greeting greetings={greetings}/>
-<section>
+<section className="test">
 
 ## I love:
 - Product management
