feat: import sass as modules, fix: copy

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,18 +5,16 @@ import Greeting from "../components/Greeting"
 import greetings from "../data/greetings"
 
 <>
-  <SEO title="About Oscar" keywords={[`Oscar Hillestad`, `Project Manager`]} />
-  <Greeting greetings={greetings}/>
-<section className="test">
+<SEO title="About Oscar" keywords={[`Oscar Hillestad`, `Project Manager`]} />
+<Greeting greetings={greetings}/>
 
 ## I love:
-- Product management
+- Building great stuff
+- Coaching great people
 - Tech-business bridging
-- Digital marketing
-- Account management
 
 ## These are some of the technical toolkits I possess:
-- Web (HTML/CSS/Javascript)
+- Web (HTML/CSS/JS)
 - Database/BI (SQL)
 - Product design (Sketch/Photoshop)
 - Marketing (Google Ads)
@@ -47,6 +45,5 @@ import greetings from "../data/greetings"
 - School of Business, Economics and Law at the University of Gothenburg (2006-2010)
 - Santa Barbara City College (2007)
 
-</section>
 </>
 
