--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -8,9 +8,9 @@ import greetings from "../data/greetings"
 <SEO title="About Oscar" keywords={[`Oscar Hillestad`, `Project Manager`]} />
 <Greeting greetings={greetings}/>
 
-Feeling just as comfortable pushing code as I do in a board room, and I've always taken pride in making sure my development and sales teams take great pride in what we build and we strive to achieve excellence in all the digital experiences we deliver. Being the link between management/sales and IT/product development is my native habitat, and I enjoy the subtle, but important art of adapting a narrative depending on the context and audience.
+Feeling just as comfortable pushing code as I do in a board room, I've always taken great pride in making sure my development and sales teams aim to achieve excellence in all the digital experiences we deliver. Being the link between management/sales and IT/product development is my native habitat, and I enjoy the subtle, but important art of adapting a narrative depending on the context and audience.
 
-I'd like to think my colleagues find me an energetic and ambitious team player, who loves Mondays and likes to put a smile on as many faces as possible over the course of a work day. It's important for me to I surround myself with like-minded people who share my vision of building something great and having fun doing it.
+I'd like to think my colleagues find me an energetic and ambitious team player, who loves Mondays and likes to put a smile on as many faces as possible over the course of a work day. It's important for me to surround myself with like-minded people, who share my vision of building something great and having fun doing it.
 
 ## I love:
 - Building great stuff
@@ -43,8 +43,8 @@ I'd like to think my colleagues find me an energetic and ambitious team player, 
 - A good game
 
 ## I worked as:
-
-- CTO/CPO, Awardit (2019-)
+- Technical Partner Manager, WirelessCar (2021-)
+- CTO/CPO, Awardit (2019-2021)
 - Sales & Marketing Manager / KAM, Crossroads Loyalty Solutions (2011-2019)
 
 ## I studied at:
